--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pasta.html">Pasta Receipe</a>
+    <ul>
+        <li> <a href="recipes/pasta.html">Pasta Receipe</a></li>
+        <li><a href="recipes/avocadotoast.html">Avocado Toast Receipe</a></li>
+    </ul>
 </body>
 </html>
